projects/amiya.akn/dist/apps/vault/gateway.networking.k8s.io.v1beta1.ReferenceGrant.envoy-gateway-system-to-openbao-ui.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  labels:
    app.kubernetes.io/name: vault
  name: envoy-gateway-system-to-openbao-ui
  namespace: vault
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway-system
  to:
    - group: ""
      kind: Service
      name: openbao-ui
