projects/amiya.akn/dist/apps/vault/core.v1.Pod.openbao-server-test.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: test
  labels:
    app.kubernetes.io/name: vault
  name: openbao-server-test
  namespace: vault
spec:
  containers:
    - command:
        - /bin/sh
        - -c
        - |
          echo "Checking for sealed info in 'bao status' output"
          ATTEMPTS=10
          n=0
          until [ "$n" -ge $ATTEMPTS ]
          do
            echo "Attempt" $n...
            bao status -format yaml | grep -E '^sealed: (true|false)' && break
            n=$((n+1))
            sleep 5
          done
          if [ $n -ge $ATTEMPTS ]; then
            echo "timed out looking for sealed info in 'bao status' output"
            exit 1
          fi

          exit 0
      image: ghcr.io/chezmoidotsh/flakes/openbao/openbao-softhsm:2.2.2-25.05-x86_64-linux
      imagePullPolicy: IfNotPresent
      name: openbao-server-test
      volumeMounts: null
  restartPolicy: Never
  volumes: null
