projects/amiya.akn/dist/apps/vault/core.v1.Service.openbao.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: openbao
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault
    helm.sh/chart: openbao-0.28.3
  name: openbao
  namespace: vault
spec:
  ports:
    - appProtocol: HTTP
      name: http
      port: 8200
      targetPort: 8200
    - name: https-internal
      port: 8201
      targetPort: 8201
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: openbao
    app.kubernetes.io/name: vault
    component: server
