projects/amiya.akn/dist/apps/vault/gateway.networking.k8s.io.v1.HTTPRoute.openbao.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/include-unifi: "true"
    link.argocd.argoproj.io/external-link: https://vault.chezmoi.sh
  labels:
    app.kubernetes.io/name: vault
  name: openbao
  namespace: vault
spec:
  hostnames:
  - vault.chezmoi.sh
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default
    namespace: envoy-gateway-system
    sectionName: chezmoi.sh-websecure
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: openbao-ui
      port: 8200
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
