projects/amiya.akn/dist/apps/vault/networking.k8s.io.v1.Ingress.openbao.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    link.argocd.argoproj.io/external-link: https://vault.tail831c5d.ts.net
  labels:
    app.kubernetes.io/name: vault
    tailscale.com/proxy-class: restricted
  name: openbao
  namespace: vault
spec:
  defaultBackend:
    service:
      name: openbao-ui
      port:
        number: 8200
  ingressClassName: tailscale
  tls:
    - hosts:
        - vault
