projects/amiya.akn/dist/apps/vault/cilium.io.v2.CiliumNetworkPolicy.allow-openbao-from-cilium-gateway.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows the Cilium Gateway API to route traffic to the OpenBao application.
      Traffic proxied by Cilium Gateway API carries the reserved:ingress identity,
      as per https://docs.cilium.io/en/latest/security/policy/layer3/#entities-based
  labels:
    app.kubernetes.io/name: vault
  name: allow-openbao-from-cilium-gateway
  namespace: vault
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vault
      component: server
  ingress:
  - fromEntities:
    - ingress
    toPorts:
    - ports:
      - port: "8200"
        protocol: TCP
