projects/amiya.akn/dist/apps/vault/cilium.io.v2.CiliumNetworkPolicy.allow-openbao-from-envoy-gateway.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows Envoy Gateway to route traffic to OpenBao application.
  labels:
    app.kubernetes.io/name: vault
  name: allow-openbao-from-envoy-gateway
  namespace: vault
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vault
      component: server
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: envoy-gateway-system
    toPorts:
    - ports:
      - port: "8200"
        protocol: TCP
